--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <h2>Contact Me</h2>
     <p>Email: <a href="mailto:akshargupta2006@gmail.com">akshargupta2006@gmail.com</a></p>
     <p>LinkedIn: <a href="https://www.linkedin.com/in/akshar-gupta">akshar-gupta</a></p>
-    <p>GitHub: <a href="#">github.com/akshar</a></p>
+    <p>GitHub: <a href="https://github.com/gupta-akshar">gupta-akshar</a></p>
   </section>
 
   <footer>
@@ -58,3 +58,4 @@
   </footer>
 </body>
 </html>
+
