--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!--
     - favicon
   -->
-  <link rel="shortcut icon" href="./images/p-logo.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="./images/logo.svg" type="image/x-icon">
 
   <!--
     - custom css link
